--- a/src/app/top/top.component.html
+++ b/src/app/top/top.component.html
@@ -1,3 +1,3 @@
-<p>
-  top works!
-</p>
+<nav class="navbar navbar-inverser bg-faded">
+  <span class="h1" class="navbar-brand mb-0">{{NavbarTitle}}</span>
+</nav>
