--- a/src/app/panel/panel.component.html
+++ b/src/app/panel/panel.component.html
@@ -1,3 +1,33 @@
-<p>
-  panel works!
-</p>
+<div class="container">
+    <div class="jumbotron">
+        <div class="row">
+            <div class="col-sm-6">
+                <app-progress> </app-progress>
+            </div>
+            <div class="col-sm-6">
+                <div class="d-flex justify-content-end">
+                    <app-attempts> </app-attempts>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h6>AAAAA</h6>
+                <p>BBBBB</p>
+                <div class="form-group">
+                    <textarea 
+                        class="form-control" 
+                        rows="3"
+                    ></textarea>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="d-flex justify-content-end">
+                    <button type="button" class="btn btn-primary">Verificar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
