--- a/src/app/panel/panel.component.html
+++ b/src/app/panel/panel.component.html
@@ -12,8 +12,8 @@
         </div>
         <div class="row">
             <div class="col">
-                <h6>AAAAA</h6>
-                <p>BBBBB</p>
+                <h6>{{instruction}}</h6>
+                <p>{{roundPhrase.phraseEng}}</p>
                 <div class="form-group">
                     <textarea 
                         class="form-control" 
