Finished attempts component

--- a/src/app/panel/panel.component.html
+++ b/src/app/panel/panel.component.html
@@ -2,11 +2,11 @@
     <div class="jumbotron">
         <div class="row">
             <div class="col-sm-6">
-                <app-progress> </app-progress>
+                <app-progress></app-progress>
             </div>
             <div class="col-sm-6">
                 <div class="d-flex justify-content-end">
-                    <app-attempts> </app-attempts>
+                    <app-attempts [attempts]="attempts"></app-attempts>
                 </div>
             </div>
         </div>
