Finished progress component

--- a/src/app/panel/panel.component.html
+++ b/src/app/panel/panel.component.html
@@ -2,7 +2,7 @@
     <div class="jumbotron">
         <div class="row">
             <div class="col-sm-6">
-                <app-progress></app-progress>
+                <app-progress [progress]="progress"></app-progress>
             </div>
             <div class="col-sm-6">
                 <div class="d-flex justify-content-end">
