Add restart game button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
         <div class="row">
             <div class="col">
                 <p>Fim de jogo - Lost</p>
+                <button class="btn btn-primary" (click)="restartGame()">Restart Game</button>
             </div>
         </div>
     </div>
@@ -17,6 +18,7 @@
         <div class="row">
             <div class="col">
                 <p>Fim de jogo - Won</p>
+                <button class="btn btn-primary" (click)="restartGame()">Restart Game</button>
             </div>
         </div>
     </div>
