--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,12 @@
     <div *ngIf="typeFinish === 'lost'; else wonGame" class="container">
         <div class="row">
             <div class="col">
-                <p>Fim de jogo - Lost</p>
-                <button class="btn btn-primary" (click)="restartGame()">Restart Game</button>
+                    <div class="d-flex justify-content-center">
+                        <p>Fim de jogo - Lost</p>
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <button class="btn btn-primary" (click)="restartGame()">Restart Game</button>
+                    </div>
             </div>
         </div>
     </div>
@@ -17,8 +21,12 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <p>Fim de jogo - Won</p>
-                <button class="btn btn-primary" (click)="restartGame()">Restart Game</button>
+                    <div class="d-flex justify-content-center">
+                        <p>Fim de jogo - Won</p>
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <button class="btn btn-primary" (click)="restartGame()">Restart Game</button>
+                    </div>
             </div>
         </div>
     </div>
